clean-up the code

--- a/Media/01_Data_Preparation.ipynb
+++ b/Media/01_Data_Preparation.ipynb
@@ -371,7 +371,7 @@
    "outputs": [],
    "source": [
     " # copy IMDB data\n",
-    "!aws s3 cp s3://personalize-solution-staging-us-east-1/personalize-immersionday-media/imdb/items.csv $imdb_dir\n"
+    "!aws s3 cp s3://personalize-solution-staging-us-east-1/personalize-immersionday-media/imdb/items.csv $imdb_dir"
    ]
   },
   {
@@ -1054,20 +1054,23 @@
     "%store interactions_filename\n",
     "%store items_filename\n",
     "%store users_filename\n",
-    "# %store workshop_dataset_group_arn\n",
-    "# %store workshop_interactions_dataset_arn\n",
-    "# %store workshop_items_dataset_arn\n",
-    "# %store workshop_users_dataset_arn\n",
-    "# %store workshop_interactions_schema_arn\n",
-    "# %store workshop_items_schema_arn\n",
-    "# %store workshop_users_schema_arn\n",
     "%store workshop_rerank_solution_name\n",
     "%store workshop_rerank_campaign_name\n",
     "%store recommender_more_like_x_name\n",
     "%store recommender_top_picks_for_you_name\n",
     "%store region\n",
     "%store account_id\n",
-    "# %store role_name"
+    "%store workshop_dataset_group_name\n",
+    "%store interactions_schema_name\n",
+    "%store items_schema_name\n",
+    "%store users_schema_name\n",
+    "%store interactions_dataset_name\n",
+    "%store items_dataset_name\n",
+    "%store users_dataset_name\n",
+    "%store items_import_job_name\n",
+    "%store interactions_import_job_name\n",
+    "%store users_import_job_name\n",
+    "%store bucket_name"
    ]
   },
   {
