--- a/Media/02_Data_Import.ipynb
+++ b/Media/02_Data_Import.ipynb
@@ -52,6 +52,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Configure the SDK to Personalize:\n",
+    "personalize = boto3.client('personalize')\n",
+    "personalize_runtime = boto3.client('personalize-runtime')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
