--- a/Media/01_Data_Preparation.ipynb
+++ b/Media/01_Data_Preparation.ipynb
@@ -278,7 +278,7 @@
     "\n",
     "In this notebook we will be importing interactions, user and item data into your environment, inspecting it and converting it to a format that will allow you use it in Amazon Personalize to train models to get personalized recommendations.\n",
     "\n",
-    "The following diagram shows the resources that we will create in this section. with the section we are building  in this notebook highlighted in blue with a dashed outline.\n",
+    "The following diagram shows the resources that we will create. with the section we are building  in this notebook highlighted in blue with a dashed outline.\n",
     "\n",
     "![Workflow](images/01_Data_Layer_Resources.jpg)\n",
     "\n",
