--- a/Media/02_Data_Import.ipynb
+++ b/Media/02_Data_Import.ipynb
@@ -7,7 +7,11 @@
     "# Amazon Personalize Resources and Importing Data\n",
     "\n",
     "\n",
-    "## In this Notebook\n",
+    "## Outline\n",
+    "\n",
+    "In this notebook, you will create a Dataset Group and import the data you prepared in the previous notebook [`01_Data_Preparation.ipynb`](01_Data_Preparation.ipynb)  to Amazon Personalize.\n",
+    "\n",
+    "To run this notebook, you need to have run [the previous notebook: `01_Data_Preparation.ipynb`](01_Data_Preparation.ipynb), where you prepared 3 datasets (item interactions, items and users).\n",
     "\n",
     "1. [Creating Amazon Personalize Resources and Importing data](#import)\n",
     "1. [Configure IAM role](#iam_role)\n",
@@ -19,10 +23,10 @@
     "1. [Import the Item Metadata](#import_items)\n",
     "1. [Import the User Metadata](#import_users)\n",
     "\n",
-    "In this notebook, you will choose a dataset and prepare it for use with Amazon Personalize.\n",
+    "In this notebook we will be uploading data to Amazon Personalize.\n",
     "\n",
-    "1. [How to Use the Notebook](#usenotebook)\n",
-    "\n"
+    "\n",
+    "![Workflow](images/01_Data_Layer_Resources.jpg)"
    ]
   },
   {
@@ -31,6 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get variables from the precious notebook\n",
     "%store -r"
    ]
   },
@@ -45,7 +50,6 @@
     "from time import sleep\n",
     "import json\n",
     "from datetime import datetime\n",
-    "\n",
     "import boto3\n",
     "import pandas as pd\n",
     "import numpy as np\n"
@@ -984,7 +988,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Go to the next notebook `02_Training.ipynb`](02_Training.ipynb) to continue."
+    "Go to the next notebook [`03_Training.ipynb`](03_Training.ipynb) to continue."
    ]
   },
   {
