--- a/Media/03_Training.ipynb
+++ b/Media/03_Training.ipynb
@@ -16,7 +16,7 @@
     "1. [Using Evaluation Metrics](#usemetrics)\n",
     "1. [Storing useful variables](#vars)\n",
     "\n",
-    "To run this notebook, you need to have run [the previous notebook: `02_Data_Import.ipynb`](02_Data_Import.ipynb), where you prepared 3 datasets (item interactions, items and users) for use in Amazon Personalize. At the end of that notebook, you saved some of the variable values, which you now need to load into this notebook.\n",
+    "To run this notebook, you need to have run [the previous notebook: `02_Data_Import.ipynb`](02_Data_Import.ipynb), where you uploaded 3 datasets (item interactions, items, and users) for use in Amazon Personalize. At the end of that notebook, you saved some of the variable values, which you now need to load into this notebook.\n",
     "\n",
     "## Introduction <a class=\"anchor\" id=\"intro\"></a>\n",
     "\n",
