--- a/Media/03_Training.ipynb
+++ b/Media/03_Training.ipynb
@@ -594,6 +594,135 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Update recommenders and Campaigns to return metadata\n",
+    "\n",
+    "By default, Recommenders and Campaigns don't return item metadata, just the itemId. Let's update them to return metadata."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    response = personalize.update_recommender(\n",
+    "        recommenderArn = workshop_recommender_more_like_x_arn,\n",
+    "        recommenderConfig={\n",
+    "            'enableMetadataWithRecommendations': True\n",
+    "        }\n",
+    "    )\n",
+    "    print (response)\n",
+    "except:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    response = personalize.update_recommender(\n",
+    "        recommenderArn = workshop_recommender_top_picks_arn,\n",
+    "        recommenderConfig={\n",
+    "            'enableMetadataWithRecommendations': True\n",
+    "        }\n",
+    "    )\n",
+    "    print (response)\n",
+    "except:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = personalize.update_campaign(\n",
+    "    campaignArn = workshop_rerank_campaign_arn,\n",
+    "    campaignConfig = { 'enableMetadataWithRecommendations' : True}\n",
+    ")\n",
+    "print (response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_time = time.time() + 10*60*60 # 10 hours\n",
+    "while time.time() < max_time:\n",
+    "\n",
+    "    # Recommender more_like_x\n",
+    "    version_response = personalize.describe_recommender(\n",
+    "        recommenderArn = workshop_recommender_more_like_x_arn\n",
+    "    )\n",
+    "    status_more_like_x = version_response['recommender']['latestRecommenderUpdate']['status']\n",
+    "\n",
+    "    if status_more_like_x == \"ACTIVE\":\n",
+    "        print(\"Build succeeded for {}\".format(workshop_recommender_more_like_x_arn))\n",
+    "        \n",
+    "    elif status_more_like_x == \"CREATE FAILED\":\n",
+    "        print(\"Build failed for {}\".format(workshop_recommender_more_like_x_arn))\n",
+    "        break\n",
+    "\n",
+    "    if not status_more_like_x == \"ACTIVE\":\n",
+    "        print(\"The More Like x recommender update is still in progress\")\n",
+    "    else:\n",
+    "        print(\"The More Like x recommender is ACTIVE\")\n",
+    "\n",
+    "    # Recommender top_picks_for_you\n",
+    "    version_response = personalize.describe_recommender(\n",
+    "        recommenderArn = workshop_recommender_top_picks_arn\n",
+    "    )\n",
+    "    status_top_picks = version_response[\"recommender\"]['latestRecommenderUpdate'][\"status\"]\n",
+    "\n",
+    "    if status_top_picks == \"ACTIVE\":\n",
+    "        print(\"Build succeeded for {}\".format(workshop_recommender_top_picks_arn))\n",
+    "    elif status_top_picks == \"CREATE FAILED\":\n",
+    "        print(\"Build failed for {}\".format(workshop_recommender_top_picks_arn))\n",
+    "        break\n",
+    "\n",
+    "    if not status_top_picks == \"ACTIVE\":\n",
+    "        print(\"The Top Picks for You recommender update is still in progress\")\n",
+    "    else:\n",
+    "        print(\"The Top Picks for You recommender is ACTIVE\")\n",
+    "        \n",
+    "\n",
+    "        \n",
+    "    # Personalized ranking Campaign\n",
+    "    version_response = personalize.describe_campaign(\n",
+    "        campaignArn = workshop_rerank_campaign_arn\n",
+    "    )\n",
+    "    status_campaign_update = version_response['campaign']['latestCampaignUpdate']['status']\n",
+    "\n",
+    "    if status_campaign_update == 'ACTIVE':\n",
+    "        print('Update succeeded for {}'.format(workshop_rerank_campaign_arn))\n",
+    "    elif status_campaign_update == \"CREATE FAILED\":\n",
+    "        print('Update failed for {}'.format(workshop_rerank_campaign_arn))\n",
+    "        in_progress_campaigns.remove(workshop_rerank_campaign_arn)\n",
+    "        break\n",
+    "    \n",
+    "    \n",
+    "    if not status_campaign_update == \"ACTIVE\":\n",
+    "        print('The campaign update is still in progress')\n",
+    "    else:\n",
+    "        print(\"The Personalized Ranking Campaign is ACTIVE\")\n",
+    "        \n",
+    "    if status_more_like_x == \"ACTIVE\" and status_top_picks == 'ACTIVE' and status_campaign_update == \"ACTIVE\":\n",
+    "        break\n",
+    "    print()\n",
+    "    time.sleep(60)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Evaluate solution versions and recommenders <a class=\"anchor\" id=\"eval\"></a>\n",
     "[Back to top](#top)\n",
     "\n",
