--- a/Media/04_Inference.ipynb
+++ b/Media/04_Inference.ipynb
@@ -1056,7 +1056,10 @@
     "    item_list = get_recommendations_response['itemList']\n",
     "    recommendation_list = []\n",
     "    for item in item_list:\n",
-    "        movie = item['metadata']['title']\n",
+    "        try:\n",
+    "            movie = item['metadata']['title']\n",
+    "        except:\n",
+    "            movie = items_df.loc[item['itemId']]['TITLE']\n",
     "        recommendation_list.append(movie)\n",
     "    filter_name = genre_filter_arn.split('/')[1]\n",
     "    new_rec_DF = pd.DataFrame(recommendation_list, columns = [filter_values])\n",
@@ -1290,7 +1293,10 @@
     "    item_list = get_recommendations_response['itemList']\n",
     "    recommendation_list = []\n",
     "    for item in item_list:\n",
-    "        movie = item['metadata']['title']\n",
+    "        try:\n",
+    "            movie = item['metadata']['title']\n",
+    "        except:\n",
+    "            movie = items_df.loc[item['itemId']]['TITLE']\n",
     "        recommendation_list.append(movie)\n",
     "    new_rec_df = pd.DataFrame(recommendation_list, columns = [movie_name])\n",
     "    # Add this dataframe to the old one\n",
@@ -1326,7 +1332,10 @@
     "item_list = get_recommendations_response['itemList']\n",
     "recommendation_list = []\n",
     "for item in item_list:\n",
-    "    movie = item['metadata']['title']\n",
+    "    try:\n",
+    "        movie = item['metadata']['title']\n",
+    "    except:\n",
+    "        movie = items_df.loc[item['itemId']]['TITLE']\n",
     "    recommendation_list.append(movie)\n",
     "user_recommendations_df = pd.DataFrame(recommendation_list, columns = [rerank_user])\n",
     "user_recommendations_df"
@@ -1422,8 +1431,11 @@
     "    item_list = get_recommendations_response['personalizedRanking']\n",
     "    recommendation_list = []\n",
     "    for item in item_list:\n",
+    "        try:\n",
+    "            movie = item['metadata']['title']\n",
+    "        except:\n",
     "            movie = items_df.loc[item['itemId']]['TITLE']\n",
-    "            recommendation_list.append(movie)\n",
+    "        recommendation_list.append(movie)\n",
     "\n",
     "\n",
     "    filter_name = filter_arn.split('/')[1]\n",
