--- a/Media/03_Training.ipynb
+++ b/Media/03_Training.ipynb
@@ -605,16 +605,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    response = personalize.update_recommender(\n",
-    "        recommenderArn = workshop_recommender_more_like_x_arn,\n",
-    "        recommenderConfig={\n",
-    "            'enableMetadataWithRecommendations': True\n",
-    "        }\n",
-    "    )\n",
-    "    print (response)\n",
-    "except:\n",
-    "    pass"
+    "response = personalize.update_recommender(\n",
+    "    recommenderArn = workshop_recommender_more_like_x_arn,\n",
+    "    recommenderConfig={\n",
+    "        'enableMetadataWithRecommendations': True\n",
+    "    }\n",
+    ")\n",
+    "print (response)\n"
    ]
   },
   {
@@ -623,16 +620,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    response = personalize.update_recommender(\n",
-    "        recommenderArn = workshop_recommender_top_picks_arn,\n",
-    "        recommenderConfig={\n",
-    "            'enableMetadataWithRecommendations': True\n",
-    "        }\n",
-    "    )\n",
-    "    print (response)\n",
-    "except:\n",
-    "    pass"
+    "response = personalize.update_recommender(\n",
+    "    recommenderArn = workshop_recommender_top_picks_arn,\n",
+    "    recommenderConfig={\n",
+    "        'enableMetadataWithRecommendations': True\n",
+    "    }\n",
+    ")\n",
+    "print (response)"
    ]
   },
   {
@@ -698,9 +692,10 @@
     "    version_response = personalize.describe_campaign(\n",
     "        campaignArn = workshop_rerank_campaign_arn\n",
     "    )\n",
-    "    status_campaign_update = version_response['campaign']['latestCampaignUpdate']['status']\n",
     "\n",
-    "    if status_campaign_update == 'ACTIVE':\n",
+    "    status_campaign_update = version_response['campaign']['status']\n",
+    "\n",
+    "    if status_campaign_update == 'ACTIVE' and version_response['campaign']['campaignConfig']['enableMetadataWithRecommendations']==True:\n",
     "        print('Update succeeded for {}'.format(workshop_rerank_campaign_arn))\n",
     "    elif status_campaign_update == \"CREATE FAILED\":\n",
     "        print('Update failed for {}'.format(workshop_rerank_campaign_arn))\n",
